# Multi-Agent-Criminal-Defense-Initial-Consultation-System1

./: LICENSE
backend/: .env.example  main.py  pyproject.toml  requirements.txt
backend/app/agents/: __init__.py  fact_digger.py  human_alert.py  law_ref.py  receptionist.py  risk_assessor.py  service_planner.py
backend/app/config/: chroma.yaml  prompt.yaml
backend/app/core/: rate_limit.py  success_response.py
backend/app/db/: db_config.py  redis_config.py
backend/app/errors/: __init__.py  codes.py  exceptions.py  handlers.py  register.py
backend/app/models/: __init__.py  user.py
backend/app/orchestrator/: __init__.py  workflow.py
backend/app/prompts/: extract_case_facts.txt  fact_digger.txt  fact_digger_first.txt  fact_digger_summary.txt  lawref.txt  rag_summary.txt  receptionist.txt  risk_assessor.txt  service_planner.txt
backend/app/rag/: legal_text_splitter.py  rag_service.py  reorder_service.py  reorder_service.py.blk  sse_models.py  task_queue.py  text_spliter.py  vector_store.py
backend/app/rag/document_handler/: processor.py
backend/app/rag/md5_manager/: md5_store.py
backend/app/rag/reranker/: __init__.py  base.py  causal_lm.py  cross_encoder.py  factory.py
backend/app/rag/retrievers/: hybrid_retriever.py
backend/app/schemas/: models.py
backend/app/security/: __init__.py  auth.py  config.py  disclaimer.py  jwt.py  rbac.py  sensitive_filter.py  session.py
backend/app/state/: __init__.py  consultation_state.py
backend/app/utils/: config.py  config_loader.py  factory.py  file_handler.py  json_handler.py  llm_gateway.py  logger.py  path_tool.py  prompt_loader.py
backend/app/v1/router/: __init__.py  auth_router.py  consultation.py  consultation_history.py  knowledge_router.py  knowledge_service.py  (+1 more)
backend/data/: 刑法.json  刑法_cleaned.json  刑法_formatted.json
backend/data/law_knowledge/: criminal_law_chapters.json
(+6 files in other folders)
