[project]
name = "criminal-defense-consultation"
version = "0.1.0"
description = "Multi-Agent Criminal Defense Initial Consultation System - MVP"
requires-python = ">=3.12"
authors = [
    { name = "Law Firm AI Team" }
]
dependencies = [
    "fastapi>=0.123.0",
    "uvicorn>=0.30.0",
    "langgraph>=1.1.0",
    "langchain>=1.2.0",
    "langchain-core>=1.2.0",
    "langchain-community>=0.4.0",
    "langchain-ollama>=1.0.0",
    "dashscope>=1.25.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.12.0",
    "PyYAML>=6.0.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=24.0.0",
    "isort>=5.12.0",
    "ruff>=0.3.0",
]
